[package]
name = "fast-svd-3x3"
version = "0.1.1"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "Quick Singular Value Decomposition for 3x3 matrix. SIMD Supported."
repository = "https://github.com/lunuy/fast-svd-3x3"
keywords = ["math", "svd", "simd"]

[dependencies]
wide = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.9.1"
nalgebra = "0.33.2"

[features]
default = []
sse = []
avx = []
avx512 = []
portable_simd = []
wide = ["dep:wide"]
